Fix progress bar alignment in arabic players.

--- a/src/styles/ports/ha/partials/_players.scss
+++ b/src/styles/ports/ha/partials/_players.scss
@@ -62,6 +62,7 @@
 }
 .HAP-player-bar {
   position: relative;
+  direction: ltr;
 }
 .HAP-player-progress {
   @include transition(width $time linear);
